@@ -4,6 +4,7 @@
 2. Make extract start and length configurable.
 3. Allow configuring no repeat artist/album/track.
 4. Fix parsing of 1/0 parameters.
+5. Display track number and total duraing analysis.
 
 0.0.2
 -----
